--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "html2canvas": "^1.0.0-rc.5"
   }
 }
