--- a/package.json
+++ b/package.json
@@ -23,26 +23,31 @@
   "homepage": "https://github.com/NastyaTsimanovich97/codejam-palette#readme",
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-loader": "^3.0.2",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "lint-staged": "^10.0.0-1",
     "mocha": "^6.2.2",
     "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "html2canvas": "^1.0.0-rc.5",
-    "prettier": "^1.19.1"
+    "html2canvas": "^1.0.0-rc.5"
   }
 }
